// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test textarea component render a TextArea component 1`] = `
<Textarea
  choices={
    Array [
      Array [
        "1",
        "one",
      ],
      Array [
        "2",
        "two",
      ],
    ]
  }
  helperProps={Object {}}
  kwargs={
    Object {
      "fields": Array [
        Object {
          "id": 1,
        },
        Object {
          "choices": Array [
            1,
            2,
          ],
        },
      ],
    }
  }
  label="test label"
  name="test name"
  onChange={
    [MockFunction] {
      "calls": Array [
        Array [
          "test name",
          1,
        ],
      ],
    }
  }
  required={false}
  value="1"
  widget={
    Object {
      "attrs": Object {
        "cols": "a",
        "rows": "c",
      },
    }
  }
>
  <div
    className="form__group "
  >
    <div
      className="form__group  form__group--wrap"
      data-word-limit="1000"
    >
      <label
        className="form__question form__question--char_field textarea"
        htmlFor="test name"
      >
        <span>
          test label
        </span>
      </label>
      <HelperComponent />
      <div
        className="form__item"
      >
        <textarea
          cols="a"
          id="test name"
          onChange={[Function]}
          rows="c"
          style={
            Object {
              "maxWidth": "90%",
            }
          }
          value="1"
        />
      </div>
    </div>
  </div>
</Textarea>
`;

exports[`Test textarea component with required render a TextArea component with required 1`] = `
<Textarea
  choices={
    Array [
      Array [
        "1",
        "one",
      ],
      Array [
        "2",
        "two",
      ],
    ]
  }
  helperProps={Object {}}
  kwargs={
    Object {
      "fields": Array [
        Object {
          "id": 1,
        },
        Object {
          "choices": Array [
            1,
            2,
          ],
        },
      ],
    }
  }
  label="test label"
  name="test name"
  onChange={[MockFunction]}
  required={true}
  value="1"
  widget={
    Object {
      "attrs": Object {
        "cols": "a",
        "rows": "c",
      },
    }
  }
>
  <div
    className="form__group "
  >
    <div
      className="form__group  form__group--wrap"
      data-word-limit="1000"
    >
      <label
        className="form__question form__question--char_field textarea"
        htmlFor="test name"
      >
        <span>
          test label
        </span>
        <span
          className="form__required"
        >
           *
        </span>
      </label>
      <HelperComponent />
      <div
        className="form__item"
      >
        <textarea
          cols="a"
          id="test name"
          onChange={[Function]}
          rows="c"
          style={
            Object {
              "maxWidth": "90%",
            }
          }
          value="1"
        />
      </div>
    </div>
  </div>
</Textarea>
`;
